Quellennachweis hinzugefügt Brushless Erklärung angefangen
Die Erklärung der Theorie ist noch nicht fertig

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -61,6 +61,11 @@
     \newpage
     \listoffigures 
     
+    \begin{flushleft}
+        \renewcommand{\refname}{Literatur- und Quellenverzeichnis}
+%        \{\refname}{Quellenverzeichnis}
+        \bibliography{Quellen/Quellen}{}    
+    \end{flushleft}
     \appendix
     % Beginn des Anhangs
     
