--- a/Dokumentation/Enddokumentation/Anhang/Aufgabenstellung.tex
+++ b/Dokumentation/Enddokumentation/Anhang/Aufgabenstellung.tex
@@ -1,16 +1,14 @@
 
-	
-		\includegraphics[page=1,width=\textwidth]{Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
-		\newpage
-		\includegraphics[page=2,width=\textwidth]{Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
-		\newpage
-		\includegraphics[page=3,width=\textwidth]{Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
-		\newpage
-		\includegraphics[page=4,width=\textwidth]{Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
-		\newpage
-		\includegraphics[page=5,width=\textwidth]{Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
-		\newpage
-		\includegraphics[page=6,width=\textwidth]{Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
-		\newpage
-		\includegraphics[page=7,width=\textwidth]{Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
-		
+\includegraphics[page=1,scale=0.86,clip,trim=33mm 20mm 20mm 20mm] {Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
+\newpage
+\includegraphics[page=2,scale=0.86,clip,trim=33mm 20mm 20mm 28mm] {Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
+\newpage
+\includegraphics[page=3,scale=0.86,clip,trim=33mm 20mm 20mm 28mm] {Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
+\newpage
+\includegraphics[page=4,scale=0.86,clip,trim=33mm 20mm 20mm 28mm] {Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
+\newpage
+\includegraphics[page=5,scale=0.86,clip,trim=33mm 20mm 20mm 28mm] {Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
+\newpage
+\includegraphics[page=6,scale=0.86,clip,trim=33mm 20mm 20mm 28mm] {Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
+\newpage
+\includegraphics[page=7,scale=0.86,clip,trim=32mm 20mm 20mm 22mm] {Enddokumentation/Anhang/Extern/Aufgabenstellung_PREN1_H14.pdf}
