Pfade neu gemacht

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -6,6 +6,7 @@
 
 %\usepackage{Common/Layout}
 \newcommand{\myTitel}{Dokumentation}
+\newcommand{\BrushlessPath}{Enddokumentation/Elektronik/BLDC}
 \begin{document}
     %
     % Deck- und Titelblatt
