--- a/Dokumentation/Enddokumentation/Elektronik/BLDC/Ansteuerung.tex
+++ b/Dokumentation/Enddokumentation/Elektronik/BLDC/Ansteuerung.tex
@@ -1,7 +1,7 @@
 \subsubsection{Brushless Motoransteuerung}
 \textbf{Theorie der Ansteuerung}:\\
 \begin{wrapfigure}{r}{0.50\textwidth}
-	\includegraphics[scale=0.45]{Funktionstests/Bilder/ZeitlicheHallSensorAnsteuerung.jpg}
+	\includegraphics[scale=0.45]{\BrushlessPath/Bilder/ZeitlicheHallSensorAnsteuerung.jpg}
 	\caption[Zeitliche Darstellung der Ansteuerung mit Hall-Sensoren]{Zeitliche Darstellung der Ansteuerung mit Hall-Sensoren \cite{AppNote:BrushlessuC}}
 	\centering
     \label{abb:ZeitlicheAnsteuerungBrushlessMotor}
@@ -11,7 +11,7 @@ Es gibt hauptsächlich zwei Methoden das Drehfeld zu regeln. Die eine und einfac
 \\
 \textbf{Aufbaubeschreibung}:
 \begin{wrapfigure}{r}{0.55\textwidth}
-	\includegraphics[scale=0.4]{Funktionstests/Bilder/MotoransteuerungSchema.jpg}
+	\includegraphics[scale=0.4]{\BrushlessPath/Bilder/MotoransteuerungSchema.jpg}
 	\centering
 	\caption{Schema des Brushless-Versuchsaufbaus}
 \label{abb:MotoransteuerungSchema}
@@ -21,7 +21,7 @@ Das Schema des gesamten Aufbaus des Tests ist in der Abbildung \ref{abb:Motorans
 In der Abbildung \ref{abb:MessplatzAufbau} ist der gesamte Aufbau abgebildet. Man beachte die markierten Felder. am unteren linken Rand ist der Motor befestigt. In der Mitte des Bildes ist die Hardware, mit der die Hallsensoren Signale rekonstruiert werden. Die generierten Signale werden dem FPGA in der unteren linken Ecke zugeführt. Diese Signale werden logisch verknüpft und danach werden die sechs Signale generiert um die H-Brücke in der oberen rechten Hälfte anzusteuern. Diese Wiederum treiben den Motor an.
 \begin{figure}[h!]
 %\vspace{-16pt}
-	\includegraphics[scale=0.14]{Funktionstests/Bilder/MessplatzAufbau.jpg}
+	\includegraphics[scale=0.14]{\BrushlessPath/Bilder/MessplatzAufbau.jpg}
 	\centering
 	\caption{Testaufbau} 
 \label{abb:MessplatzAufbau}
