Neue Variable für die gemeinsame Doku hinzugefügt

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -7,6 +7,7 @@
 %\usepackage{Common/Layout}
 \newcommand{\myTitel}{Dokumentation}
 \newcommand{\BrushlessPath}{Enddokumentation/Elektronik/BLDC}
+\newcommand{\DasAndereTeam}{T27}
 \begin{document}
     %
     % Deck- und Titelblatt
