--- a/Dokumentation/Enddokumentation/Elektronik/BLDC/BLDC_Source.bib
+++ b/Dokumentation/Enddokumentation/Elektronik/BLDC/BLDC_Source.bib
@@ -3,3 +3,11 @@
     title     = {{Atmel AVR443: Sensor-based Control of Three Phase Brushless DC Motor}},
     year      = {2013}
 }
+
+@misc{HSLU:Pluess,
+author = {{Tobias Plüss}},
+howpublished = {{Hochschule Luzern, Technik und Architektur}},
+note = {{In einem Gespräch}},
+month = {\APACmonth{11}},
+year = {2014}
+}
