Struktur erstellt und angepasst

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -6,7 +6,7 @@
 
 %\usepackage{Common/Layout}
 \newcommand{\myTitel}{Dokumentation}
-\newcommand{\BrushlessPath}{Enddokumentation/Elektronik/BLDC}
+\newcommand{\BrushlessPath}{Enddokumentation/BLDC}
 \newcommand{\BLDCTeams}{T27 und T32}
 \newcommand{\BLDCcollab}{Dieses Kapitel ist eine Zusammenarbeit der Gruppen \BLDCTeams. }
 \begin{document}
@@ -30,17 +30,20 @@
     \input{Enddokumentation/ManagementSummary}
     \newpage
     \input{Enddokumentation/Einleitung}
-    \input{Enddokumentation/Danksagung}
+    %\input{Enddokumentation/Danksagung}
     \newpage
-    \input{DasTeam/Teamcharta}
+    %\input{DasTeam/Teamcharta}
     \input{DasTeam/Zielsetzung}
     \newpage
-    \input{Enddokumentation/Elektronik/BLDC/Ansteuerung}
-    \newpage
-   
+    %\input{Enddokumentation/Elektronik/BLDC/Ansteuerung}
+    \input{Enddokumentation/Varianten/VerschiedeneVarianten}
+    %\newpage
+    \input{Enddokumentation/Loesungskonzept/Loesungskonzept}
+    \input{Enddokumentation/Tests/Tests}
+    \input{Enddokumentation/Projektplanung_Management/PlanungManagement}
 	  %Beschreibung des Lösungskonzept
-	    \input{Loesungskonzept/Produktbeschreibung}
-	    \newpage
+	    %\input{Loesungskonzept/Produktbeschreibung}
+	    %\newpage
 	    
 		    %  Übersichtszeichnungen / Übersichtsmodell
 		     
@@ -51,14 +54,14 @@
 		    %  Softwaresubsysteme 
 		    %  Wichtige Berechnungen (Resultate) 
 		    %  Beschreibung von Versuchen und Tests mit Ergebnissen
-		    \input{Funktionstests/Ballmaschine} 
-		    \newpage
-		    \input{Funktionstests/BallmaschineDrehzahl}
-		    \newpage
-		    \input{Funktionstests/Pneumatikzylinder}
-		    \newpage
-		    \input{Funktionstests/BrushlessMotorAnsteuerung}
-		    \newpage
+		    %\input{Funktionstests/Ballmaschine} 
+		    %\newpage
+		    %\input{Funktionstests/BallmaschineDrehzahl}
+		    %\newpage
+		    %\input{Funktionstests/Pneumatikzylinder}
+		    %\newpage
+		    %\input{Funktionstests/BrushlessMotorAnsteuerung}
+		    %\newpage
     
 	  %Projektmanagement und Projektplanung 
 	    
