--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -35,11 +35,11 @@
     %\input{DasTeam/Teamcharta}
     \input{DasTeam/Zielsetzung}
     \newpage
-    %\input{Enddokumentation/Elektronik/BLDC/Ansteuerung}
     \input{Enddokumentation/Varianten/VerschiedeneVarianten}
     %\newpage
     \input{Enddokumentation/Loesungskonzept/Loesungskonzept}
     \input{Enddokumentation/Tests/Tests}
+    %Projektmanagement und Projektplanung 
     \input{Enddokumentation/Projektplanung_Management/PlanungManagement}
 	  %Beschreibung des Lösungskonzept
 	    %\input{Loesungskonzept/Produktbeschreibung}
@@ -63,13 +63,14 @@
 		    %\input{Funktionstests/BrushlessMotorAnsteuerung}
 		    %\newpage
     
-	  %Projektmanagement und Projektplanung 
+	  
 	    
 	    
-	  % Schlussdiskussion mit den Unterabschnitten 
+	% Schlussdiskussion mit den Unterabschnitten 
 	    %  Entwicklungskosten, zeitlicher Entwicklungsaufwand 
 	    %  Erfahrungen, „Lessons learned“, kritische Würdigung der Arbeiten 
-	    %  offene Punkte, Risiken und Ausblick auf PREN 2 
+	    %  offene Punkte, Risiken und Ausblick auf PREN 2
+    \input{Enddokumentation/Schluss/Schluss}
     
     
     \newpage
@@ -95,7 +96,11 @@
 	            
 	            % ========> Yves <=============   Subsections im Anhang? PDF's richtig einbinden?
 	            %  Aufgabenstellung (Original) 
-	            \input{Enddokumentation/Anhang/Aufgabenstellung}
+	            
+	            \input{Enddokumentation/Anhang/Berechnungen}
+	            
+	            \section{Aufgabenstellung}
+	            	\input{Enddokumentation/Anhang/Aufgabenstellung}
 	            \newpage
 	            
 	            %  Recherche 
