--- a/Dokumentation/Enddokumentation/Projektplanung_Management/PlanungManagement.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/PlanungManagement.tex
@@ -1,3 +1,2 @@
 \section{Projektplanung /-Management}
-    \input{Enddokumentation/Projektplanung_Management/Kosten}
-    \input{Enddokumentation/Projektplanung_Management/Zeit}
+	Das Projektteam 32 besteht aus sieben Personen welche sich auf folgende Studienrichtungen aufteilen: Drei Personen Maschinentechnik, drei Personen Informatik und eine Person Elektrotechnik. Die Studienrichtungen sind sogleich die jeweiligen Verantwortungen. In den Bereichen mit mehreren Projektmitgliedern wird die Verantwortung  für Teilaufgaben jeweils situativ verteilt. Für allgemeine Projektarbeiten ist jeweils die Hauptverantwortliche Person bestimmt. Diese kann Teilaufgaben definieren und sie an andere Teammitglieder zur Bearbeitung delegieren. Die Hierarchie im Team ist bewusst flach und ohne eigentlichen Projektleiter gehalten. Entscheide werden im Plenum diskutiert und gefällt. Die Leitung oder Führung einer Besprechung obliegt der oder den Verantwortlichen des jeweiligen Themas. Mit dieser Teamstruktur ist gewährleistet, dass alle Mitglieder Verantwortung tragen können und müssen. Dies soll Motivation und Eigeninitiative fördern.
