--- a/Dokumentation/Enddokumentation/BLDC/Testbericht.tex
+++ b/Dokumentation/Enddokumentation/BLDC/Testbericht.tex
@@ -41,25 +41,25 @@
     Die im FPGA enthaltene Logik basiert auf der Wahrheitstabelle, die in 
     Abbildung \ref{abb:WahrheitstabelleAnsteuerung} abgebildet ist.
     
-\subsubsection{Messmittel}
-    \begin{zebratabular}{lll}
-        \rowcolor{gray} Gerät &
-            Typ &
-            Nummer \\
-        Speisegerät & 
-            Rohde \& Schwarz NGSM 32/10 &
-            Inv. Nr. 009 \\
-        Oszilloskop &
-            Agilent MSO6052A &
-            Inz. Nr. 44 S/N: MY44001903 \\
-        Mainframe &
-            Hameg HM8001-2 &
-            SN: 059520046 \\
-        Speisegerät &
-            Hameg HM8040-3 &
-            SN: 015405014 \\
-        Pulsgenerator &
-            Hameg HM8035 &
-            Inv. Nr. 44 \\
-    \end{zebratabular}
+%\subsubsection{Messmittel}
+%    \begin{zebratabular}{lll}
+%        \rowcolor{gray} Gerät &
+%            Typ &
+%            Nummer \\
+%        Speisegerät & 
+%            Rohde \& Schwarz NGSM 32/10 &
+%            Inv. Nr. 009 \\
+%        Oszilloskop &
+%            Agilent MSO6052A &
+%            Inz. Nr. 44 S/N: MY44001903 \\
+%        Mainframe &
+%            Hameg HM8001-2 &
+%            SN: 059520046 \\
+%        Speisegerät &
+%            Hameg HM8040-3 &
+%            SN: 015405014 \\
+%        Pulsgenerator &
+%            Hameg HM8035 &
+%            Inv. Nr. 44 \\
+%    \end{zebratabular}
 
