--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
@@ -1,1 +1,9 @@
-\subsection{Zeit}
+\begin{landscape}
+	\subsection{Zeit}	
+	 \begin{figure}[h!]
+	    	\includegraphics[page=1,scale=0.8,clip,trim=7mm 90mm 31mm 39mm]{Enddokumentation/Projektplanung_Management/Bilder/Projektzeitachse.pdf}
+	       	\centering
+	       	\caption{Zeitplan des Projekts} 
+	        \label{abb:ProjektZeitstrahl}
+	    \end{figure}
+\end{landscape}
