--- a/Dokumentation/Enddokumentation/Schluss/Rueckblick.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Rueckblick.tex
@@ -1,1 +1,8 @@
 \subsection{Rückblick}
+Eine wichtige Erkenntnis wurde im PREN1-Modul bezüglich kollaboratives Arbeiten gewonnen. Der Austausch aller Dateien fand via Dropbox statt. Dieses Modell zeigte jedoch mit der Zeit schwächen, vor allem bezüglich gemeinsames editieren eines Dokuments. Es wäre daher eine Diskussion wert, die Dokumente welche von mehreren Teammitgliedern bearbeitet werden, auf eine Plattform für kollaboratives Arbeiten (z.B. Google Drive) auszulagern und die Dropbox als reinen Dateienaustausch beizubehalten.\\
+\\
+Im PREN2-Modul müssen wir vermehrt und verbessert zu Beginn einer Meilensteinphase absprechen oder abklären, welche Dokumente mit welchem spezifischen Inhalt erstellt sein müssen. Jedesmal mussten wir vor einem Meilenstein die Dokumente überarbeiten oder gar neu erstellen, weil sich zeigte, dass der Inhalt nicht dem Geforderten entsprach.\\
+\\
+Wir haben bewusst eine flache Teamhierarchie gewählt und managen unser Projekt so, das jedes Teammitglied die Verantwortung für einen festgelegten Bereich erhält. Generelle Diskussionen zu Projektmanagement-Themen werden im Plenum besprochen und allfällige Entscheide gegebenenfalls gefällt. Bis zum jetzigen Zeitpunkt funktioniert diese Art der Zusammenarbeit ohne grosse Probleme und Reiberein. \\
+\\
+Es hat sich gezeigt, dass man in Diskussionen rasch vom eigentlichen Thema abweicht oder nicht mehr zielgerichtet diskutiert. Alle Teammitglieder sollten vermehrt darauf bedacht sein, themenbezogen und effizient an einer Lösung zu diskutieren.
