Diverse Texte hinzugefügt

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Controller.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Controller.tex
@@ -1,1 +1,2 @@
 \subsubsection{Controller}
+	Der Controller erhält vom Smartphone die Angabe, in welchem Winkel sich der Korb befindet. Anhand dieser wird der Controller die benötigten Schritte berechnen und die resultierenden Befehle an die Motorsteuerung absetzen. Die Controller-Hardware steuert die Motoren der Ballzuführung, der Stepper für die Ausrichtung der Apparatur und die Motoren zur Beschleunigung der Bälle.
