Etwas zur ET-Gruppe hinzugefügt, Struktur angepasst

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -6,7 +6,7 @@
 %
 %\usepackage{Common/Layout}
 \newcommand{\myTitel}{Dokumentation}
-\newcommand{\BrushlessPath}{Enddokumentation/BLDC}
+\newcommand{\BrushlessPath}{Enddokumentation/ET_Gruppe}
 \newcommand{\BLDCTeams}{T27 und T32}
 \newcommand{\BLDCcollab}{Dieses Kapitel ist eine Zusammenarbeit der Gruppen \BLDCTeams. }
 \begin{document}
@@ -52,6 +52,7 @@
     \input{Enddokumentation/Loesungskonzept/Foerderband}
     \input{Enddokumentation/Loesungskonzept/Schwungraeder}
     \input{Enddokumentation/Loesungskonzept/Versorgungskonzept}
+    \input{\BrushlessPath/Hardwarezusammenarbeit}
     \input{Enddokumentation/Loesungskonzept/Softwarearchitektur}
     %
     % Tests
