Einleitung modifiziert, Rückblick ergänzt

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -34,8 +34,8 @@
     \addcontentsline{toc}{section}{Abstract}
     \newpage
     \input{Enddokumentation/Einleitung}
-    \newpage
-    \input{DasTeam/Zielsetzung}
+%    \newpage
+%    \input{DasTeam/Zielsetzung}
     \newpage
     \input{Enddokumentation/Varianten/VerschiedeneVarianten}
     %
