--- a/Dokumentation/Enddokumentation/Schluss/Schluss.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Schluss.tex
@@ -1,1 +1,2 @@
 \section{Schlussdiskussion}
+Die Zusammenarbeit in der Gruppe war ausgezeichnet. Nach einer kurzen Einschwingphase konnte direkt mit der Erarbeitung eines Konzept begonnen werden.
