--- a/Dokumentation/Enddokumentation/Einleitung.tex
+++ b/Dokumentation/Enddokumentation/Einleitung.tex
@@ -1,8 +1,12 @@
 \section{Einleitung}
-Im heutigen Arbeitsumfeld ist es unerlässlich, dass man in der Lage ist in einem Team, das meinst aus mehreren Spezialisten verschiedener Fachgebiete zusammengesetzt ist, zu arbeiten. An diesem Punkt setzt sie Hochschule Luzern Technik \& Architektur mit dem Modul \enquote{Produktentwicklung} (PREN) an. Dieses Modul ist in zwei Teile aufgeteilt. Im PREN 1 wird in einem interdisziplinären Team eine Aufgabenstellung bearbeitet, um ein Lösungskonzept zu erarbeiten. Dieses Konzept wird anschliessend im folgenden Modul PREN 2 umgesetzt.\\
+Im heutigen Arbeitsumfeld ist es unerlässlich, dass man in der Lage ist in einem Team, das meinst aus mehreren Spezialisten verschiedener Fachgebiete zusammengesetzt ist, zu arbeiten. An diesem Punkt setzt sie Hochschule Luzern Technik \& Architektur mit dem Modul \enquote{Produktentwicklung} (PREN) an. Das Ziel dieses Moduls ist, anhand einer Aufgabenstellung einen Entwicklungsprozess durch zu arbeiten und in einem interdisziplinären Team eine Lösung zu erarbeiten und umzusetzen. Die Teams bestehen aus Studierenden aus den Studiengängen Elektrotechnik, Informatik und Maschinenbau. Dieses Modul ist in zwei Teile aufgeteilt und erstreckt sich über zwei Semester. Im PREN 1 wird anhand der Aufgabenstellung ein Lösungskonzept entwickelt und erarbeitet. Dieses Konzept wird im anschliessenden Semester im PREN 2 umgesetzt.\\
 \\
-Im diesem Rahmen erhalten interdisziplinäre Teams die Aufgabe, einen autonomen Ballwerfer zu erarbeiten. Das Ziel besteht darin, möglichst alle der fünf Tennisbälle, in möglichst kurzer Zeit, in einen Korb zu befördern. Als weiteres Bewertungskriterium gilt das Gewicht des Produkts, welches ab zwei Kilogramm ein stufenweiser Punkteabzug zur Folge hat. Der Korb befindet sich in einem Spielfeld - welches seitlich und in der Höhe begrenzt ist - am hinteren Ende an einer Wand und ist horizontal verschiebbar. Die endgültige Position des Korbes wird kurz vor der Abgabe des Startsignals durch einen Dozent festgelegt. Die Übermittlung des Startsignals muss drahtlos erfolgen, nach Ausführen der Aufgabe, muss das Endsignal akustisch oder optisch erzeugt werden.\\
+Im diesem Rahmen erhalten interdisziplinäre Teams die Aufgabe, einen autonomen Ballwerfer zu erarbeiten. Das Ziel besteht darin, möglichst alle der fünf Tennisbälle, in möglichst kurzer Zeit, in einen Korb zu befördern. Als weiteres Bewertungskriterium gilt das Gewicht des Produkts, welches ab zwei Kilogramm ein stufenweiser Punkteabzug zur Folge hat. Der Korb befindet sich in einem Spielfeld - welches seitlich und in der Höhe begrenzt ist - am hinteren Ende an einer Wand und ist horizontal verschiebbar. Die endgültige Position des Korbes wird kurz vor der Abgabe des Startsignals durch einen Dozent festgelegt, und ist somit nicht bekannt. Die Übermittlung des Startsignals muss drahtlos erfolgen, nach Ausführen der Aufgabe, muss das Endsignal akustisch oder optisch erzeugt werden.\\
 \\
-Unser interdisziplinäres Team besteht aus Studenten der drei Disziplinen Elektrotechnik, Maschinenbau und Informatik.\\
-\\
+Das Ziel der Arbeit ist, die Aufgabenstellung erfolgreich in einem Apparat umzusetzen. Dabei hat sich unser Team eigene Ziele gesetzt und gewichtet. Diese sind:
+\begin{enumerate}
+    \item Treffgenauigkeit
+    \item Geschwindigkeit
+    \item Gewicht
+\end{enumerate}
 %Das Produktentwicklungsmodul ist in zwei Teile aufgeteilt, das PREN1-Modul im Herbstsemester sowie das PREN2-Modul im Frühlingssemester. Wichtigste Aufgabe im PREN1-Modul ist das erarbeiten eines Konzepts, eine professionelle, strukturierte Projektabwicklung und das Verifizieren kritischer Teilprobleme mittels Funktionsmuster. Die Realisation des erarbeiteten Konzepts wird im PREN2-Modul in Angriff genommen.
