Neuester Stand der ET-Gruppen-Doku eingefügt

--- a/Dokumentation/Common/header.tex
+++ b/Dokumentation/Common/header.tex
@@ -59,7 +59,9 @@
 %Damit man eine Zelle farbig markiert werden
 \usepackage{colortbl}
 
-
+    \usepackage{tikz}           % TikZ - "TikZ ist kein Zeichenprogramm"
+    \usepackage{wrapfig} 
+    \usetikzlibrary{tikzmark}   % References for hooking tikz graphics to
 %
 % Rechnen in Tabellen. Zeichen für den Dezimalpunkt
 %
