--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -5,6 +5,8 @@
 %                                            % (siehe http://lefti.amigager.de/latex/Aufbau.html)
 %
 %\usepackage{Common/Layout}
+\input{Enddokumentation/ET_Gruppe/booleans}
+\setboolean{EMBED}{true}
 \newcommand{\myTitel}{Dokumentation}
 \newcommand{\BrushlessPath}{Enddokumentation/ET_Gruppe}
 \newcommand{\BLDCTeams}{T27 und T32}
@@ -88,7 +90,7 @@
     \begin{flushleft}
         \renewcommand{\refname}{Literatur- und Quellenverzeichnis}
 %        \{\refname}{Quellenverzeichnis}
-        \bibliography{Enddokumentation/BLDC/BLDC_Source,Quellen/Quellen}{} %!!! Kein Leerzeichen nach dem , !!!!
+        \bibliography{Enddokumentation/ET_Gruppe/BLDC_Source,Quellen/Quellen}{} %!!! Kein Leerzeichen nach dem , !!!!
     \end{flushleft}
     %
     % Beginn des Anhangs
