--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -45,6 +45,7 @@
     %
     \input{Enddokumentation/Loesungskonzept/Loesungskonzept}
     \input{Enddokumentation/Loesungskonzept/Funktionsbeschreibung}
+    \newpage
     \input{Enddokumentation/Loesungskonzept/Geraeteuebersicht}
     \input{Enddokumentation/Loesungskonzept/Startgeraet}
     \input{Enddokumentation/Loesungskonzept/SmartphoneAlsMaster}
