--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -1,1 +1,24 @@
 \section{Verschiedene Varianten}
+Um Eckpfeiler für die zu Beginn des Projekts benötigten Recherchen zu erhalten, musste das Problem grob in seine Einzelteile zerlegt werden. Die Aufteilung erfolgte in den Bereich der Kommunikation zwischen elektronischen Geräten, Möglichkeiten zur Objekterkennung und Objektverfolgung, diverse Flugobjekte und Fahrantriebe, Arten eines Drehmechanismus und Wurfmechanismus sowie das Versorgungskonzept. 
+Nach der Recherche folgte als nächster Schritt das Erstellen einer Funktionsskizze, um daraus die einzelnen Teilprobleme zu eruieren.
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.9\textwidth]{Enddokumentation/Varianten/Bilder/Funktionsskizze.png}
+	\caption{Funktionsskizze}
+	\label{fig:Funktionsskizze}
+\end{figure}
+Auf Grundlage der Recherche konnte zu jedem Teilproblem eine Anzahl Lösungsansätze genannt werden. In einem nächsten Schritt erfolgte die Beurteilung jedes einzelnen Lösungsansatzes mittels möglichst einheitlichen Bewertungskriterien. Jedem Lösungsansatz ist schlussendlich eine Prozentzahl zugeordnet, in wie fern die Lösung die Höchstanforderung des jeweiligen Teilproblems erfüllt. Um diese Werte sinnvoll als Entscheidungshilfe einsetzen zu können, führt man alle Teilprobleme, unterteilt in die möglichen Lösungsansätze, in einem Dokument (Grobkonzept) zusammen. \\
+\\
+%Bild Grobkonzept
+Das Grobkonzept erlaubt es grafisch verschiedene Kombinationsmöglichkeiten aufzuzeigen. Um möglichst vielen differenzierten Ansätzen Rechnung zu tragen, wurden vier Varianten während einer Diskussionsrunde festgelegt.\\\\ 
+!!!!! Achtung: wenn Grobkonzept mit Bild im Text, Variantennummern in Farben umbenennen. !!!!\\\\
+Eine Variante ist die Kombination aller Lösungsansätze mit der höchsten Prozentzahl. Eine zweite Variante basiert auf der Idee, die Bälle in eine Kugel einzuschliessen, das Gerät parallel zur Spielfeldwand zu verschieben und den Kübel mit einer Smartphone-Kamera zu erkennen. Der Ballwerfer soll durch einen Akkumulator mit Energie versorgt werde. Die dritte Variante hat als Ausgangspunkt die Bälle in einem Drehkranz und befördert diese einzeln in den Korb, die restlichen Kriterien werden Kongruent zur zweiten Variante ausgeführt. In der vierten Variante befördert der Ballwerfer die Bälle aus der Startposition in bogenförmiger Kurve in den Korb. Die Ausgabe der Bälle erfolgt vereinzelt, die übrigen Teilprobleme verwenden wiederum, Kongruent zur zweiten Variante, eine Smartphone-Kamera zur Korberkennung und ein Akkumulator als Energieversorgung.\\
+\\
+Die Entscheidung fiel auf die vierte Variante, diese bietet als gesamtes Konzept die erfolgversprechendste und effizienteste Lösung, bezüglich der in der 
+Team-Charta oder Zielsetzung // Verweis definierten Ziele.\\
+\\
+Nach der Entscheidung für eine Variante folgt die Detaillierung dieses Konzeptes
+in ein Feinkonzept. Die ursprünglich sieben Teilprobleme wurden in 19 Subteilprobleme
+auf gesplittet. Zu jedem Subteilproblemen existieren wiederum Lösungsvarianten, im Unterschied zum Grobkonzept erfolgt die Bewertung nicht mit Prozentzahlen, die Lösungsvarianten werden miteinander verglichen und nach aktuellem Wissenstand eine oder eventuell auch mehrere Lösungsvarianten ausgewählt. 
+
+
