--- a/Dokumentation/Enddokumentation/Loesungskonzept/Loesungskonzept.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Loesungskonzept.tex
@@ -1,1 +1,2 @@
 \section{Lösungskonzept}
+Der Hauptteil der Arbeit umfasst die Konzeption, diverse Funktionsmuster und grundlegende Berechnungen für den autonomen Ballwerfer \enquote{Flywheel}.
